[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Menus/pausescreen.gd" type="Script" id=1]

[node name="Pausescreen" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -400.0
margin_right = 800.0
margin_bottom = 400.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.262745, 0.247059, 0.247059, 1 )

[node name="Settings tabs" type="TabContainer" parent="."]
anchor_right = 1.0
margin_bottom = 36.0
tab_align = 0

[node name="General" type="Tabs" parent="Settings tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="Settings tabs/General"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="Settings tabs/General/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1567.0
margin_bottom = 39.0
columns = 2

[node name="Fullscreen" type="Label" parent="Settings tabs/General/MarginContainer/GridContainer"]
margin_right = 74.0
margin_bottom = 14.0
text = "  FullScreen"

[node name="fullcheck" type="CheckButton" parent="Settings tabs/General/MarginContainer/GridContainer/Fullscreen"]
margin_top = 12.0
margin_right = 1542.0
margin_bottom = 52.0
size_flags_horizontal = 10

[node name="Graphics" type="Tabs" parent="Settings tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="Settings tabs/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="Settings tabs/Graphics/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1567.0
margin_bottom = 153.0
columns = 2

[node name="Vsync" type="Label" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_top = 13.0
margin_right = 106.0
margin_bottom = 27.0
text = "  Vsync"

[node name="vscheck" type="CheckButton" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_left = 1466.0
margin_right = 1542.0
margin_bottom = 40.0
size_flags_horizontal = 10

[node name="Potato" type="Label" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_top = 45.0
margin_right = 106.0
margin_bottom = 59.0
text = "Graphics Quality"

[node name="HSplitContainer" type="HSplitContainer" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_left = 989.0
margin_top = 44.0
margin_right = 1542.0
margin_bottom = 60.0
size_flags_horizontal = 10

[node name="potato2" type="Label" parent="Settings tabs/Graphics/MarginContainer/GridContainer/HSplitContainer"]
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "Potato"

[node name="potatoslider" type="HSlider" parent="Settings tabs/Graphics/MarginContainer/GridContainer/HSplitContainer"]
margin_left = 53.0
margin_right = 553.0
margin_bottom = 16.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
value = 100.0

[node name="MaxFPS" type="Label" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_top = 67.0
margin_right = 106.0
margin_bottom = 81.0
text = "Max FPS"

[node name="maxfps button" type="OptionButton" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_left = 1496.0
margin_top = 64.0
margin_right = 1542.0
margin_bottom = 84.0
size_flags_horizontal = 10
text = "All"
items = [ "All", null, false, 1, null, "24", null, false, 2, null, "60", null, false, 3, null, "120", null, false, 3, null ]
selected = 0

[node name="Display FPS" type="Label" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_top = 101.0
margin_right = 106.0
margin_bottom = 115.0
text = "Display FPS"

[node name="FPS button" type="CheckButton" parent="Settings tabs/Graphics/MarginContainer/GridContainer"]
margin_left = 1466.0
margin_top = 88.0
margin_right = 1542.0
margin_bottom = 128.0
size_flags_horizontal = 10

[connection signal="toggled" from="Settings tabs/General/MarginContainer/GridContainer/Fullscreen/fullcheck" to="." method="_on_fullcheck_toggled"]
[connection signal="toggled" from="Settings tabs/Graphics/MarginContainer/GridContainer/vscheck" to="." method="_on_vscheck_toggled"]
[connection signal="value_changed" from="Settings tabs/Graphics/MarginContainer/GridContainer/HSplitContainer/potatoslider" to="." method="_on_potatoslider_value_changed"]
[connection signal="item_selected" from="Settings tabs/Graphics/MarginContainer/GridContainer/maxfps button" to="." method="_on_maxfps_button_item_selected"]
[connection signal="toggled" from="Settings tabs/Graphics/MarginContainer/GridContainer/FPS button" to="." method="_on_FPS_button_toggled"]
